	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================
08/11
	* Added remaining 11.2 skill db entries [Playtester]
	* Implemented 11.2 skills in the skill_db [Playtester]
	- note that the code for them is still missing
08/10
	* Raised splash range of Focused Arrow Strike and First Wind [Playtester]
	- temporary fix until the real area calculation is added
	- also started adding some of the 11.2 skills
	* Fixed a wrong(?) line for Venom Splasher in abra_db.txt [ultramage]
08/09
	* Fixed damage of NPC_COMBOATTACK [Playtester]
	- also reverted some custom skill changes
08/08
	* Changed the structure of the homunculus_db file so that the homunculus
	  and its evolved version share the same line. Also added the evolution
	  bonuses to it. [Skotlex]
	* Sharp Arrow now gives Crit+20 [Playtester]
08/07
	* Fixed some missing max levels for npc skills [Skotlex]
08/06
	* Added custom Hollow Poring mob_db2 entry
	* Added Job_Baby_Alchemist define to complement the Job_Alchemist update
08/04
	* Added missing /blacksmith packet action to packet_db.txt
	* Removed "eathena's custom equipped mobs" from mob&skill db [ultramage]
08/01
	* Added the remaining arrow craftings [Playtester]
	* Added some of the new arrow craftings for testing purposes [Playtester]
	- some item names are still unknown, help needed
	- fixed an item name
	- more to come
07/30
	* Rev. 10932 Added several localized quest items to item_trade. [L0ne_W0lf]
	- Added some Rachel quest items as well as cash shop specific items to item_trade
	* Rev. 10931 Additional Pet Tames reverted again back to item-type 2 (recent commit by Ultramage fixes double-consumption) [L0ne_W0lf]
	* Rev. 10929 Added 1 slot to all coloured ribbons as pointed out by Elfange. [L0ne_W0lf]
07/28